// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page: Products/CreateEdit rendering should render create form if id is not set 1`] = `
<div>
  Creating a new product
</div>
`;

exports[`page: Products/CreateEdit rendering should render edit form if id is set 1`] = `
<div>
  Editing product with ID=123
</div>
`;
